--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
             mermaid.initialize({ startOnLoad: true });
         </script>
 
-        Here is one mermaid diagram:
+        <h1>Here is one mermaid diagram:</h1>
         <div class="mermaid">
-            graph TD A[Client] --> B[Load Balancer] B --> C[Server1] B --> D[Server2]
+            sequenceDiagram
+                autonumber
+                Alice->>John: Hello John, how are you?
+                loop Healthcheck
+                    John->>John: Fight against hypochondria
+                end
+                Note right of John: Rational thoughts!
+                John-->>Alice: Great!
+                John->>Bob: How about you?
+                Bob-->>John: Jolly good!
         </div>
-
-        And here is another:
+        <h1>Here is another mermaid diagram:</h1>
         <div class="mermaid">
             graph TD A[Client] -->|tcp_123| B(Load Balancer) B -->|tcp_456| C[Server1] B
             -->|tcp_456| D[Server2]
