--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     <h3>Fluxo Sucesso - Reembolso / Devolução</h3>
     <p>Devolução ou reembolso é o ato de devolver o valor total ou uma parte de uma transaferência específica. Essa funcionalidade tem o prazo máximo de 90 dias depois do pagamento efetuado com sucesso.</p>
     <h3>Diagrama</h3>
-    <div class="mermaid">
+    <div class="mermaid hide">
       sequenceDiagram
         autonumber
         Usuário Recebedor->>Participante Recebedor: Envia 
@@ -355,7 +355,7 @@
     </div>
     <h3>Mensagens</h3>
     <!-- thanks for the tabs example: https://codepen.io/raubaca/pen/PZzpVe -->
-    <div class="tabs">
+    <div class="tabs hide">
       <div class="tab">
         <input type="checkbox" id="chckQRDN1">
         <label class="tab-label" for="chckQRDN1">PACS.004</label>
@@ -502,7 +502,7 @@
     <h3>Fluxo Sucesso - Mecanismo especial de devolução</h3>
     <p>O mecanismo especial de devolução permite que bancos revertam operações realizadas por falha ou suspeita de fraude.</p>
     <h3>Diagrama</h3>
-    <div class="mermaid">
+    <div class="mermaid hide">
       sequenceDiagram
         autonumber
         Usuário Recebedor->>Participante Recebedor: Envia 
@@ -519,7 +519,7 @@
     </div>
     <h3>Mensagens</h3>
     <!-- thanks for the tabs example: https://codepen.io/raubaca/pen/PZzpVe -->
-    <div class="tabs">
+    <div class="tabs hide">
       <div class="tab">
         <input type="checkbox" id="chckQRDN1">
         <label class="tab-label" for="chckQRDN1">PACS.004</label>
